--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^6.14.0",
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.1",
     "lineicons": "^1.3.2",
     "next": "15.4.4",
     "react": "19.1.0",
