--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.1",
+    "jose": "^6.0.12",
     "lineicons": "^1.3.2",
     "next": "15.4.4",
     "react": "19.1.0",
