feat(auth): update create account details - implement username for creating name for dashboard - add date now for recording account date creation - add npm script for quick prisma client update

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"db:pull": "npx prisma db pull",
+		"db:generate": "npx prisma generate",
 		"lint": "next lint"
 	},
 	"dependencies": {
