--- a/package.json
+++ b/package.json
@@ -13,18 +13,22 @@
 	"dependencies": {
 		"@prisma/client": "^6.14.0",
 		"@radix-ui/react-dialog": "^1.1.15",
+		"@radix-ui/react-popover": "^1.1.15",
+		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.7",
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.1",
 		"jose": "^6.0.12",
 		"lucide-react": "^0.540.0",
 		"next": "15.4.4",
 		"react": "19.1.0",
+		"react-day-picker": "^9.9.0",
 		"react-dom": "19.1.0",
 		"recharts": "^2.15.4",
 		"tailwind-merge": "^3.3.1",
