--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
 		"jose": "^6.0.12",
 		"lucide-react": "^0.540.0",
 		"next": "15.4.4",
+		"next-themes": "^0.4.6",
 		"react": "19.1.0",
 		"react-day-picker": "^9.9.0",
 		"react-dom": "19.1.0",
 		"recharts": "^2.15.4",
+		"sonner": "^2.0.7",
 		"tailwind-merge": "^3.3.1",
 		"zod": "^4.0.17"
 	},
