--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@tanstack/eslint-plugin-query": "^5.86.0",
 		"@testing-library/dom": "^10.4.1",
 		"@testing-library/react": "^16.3.0",
 		"@types/node": "^20",
