--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,20 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": ""
+	"name": "backend",
+	"version": "1.0.0",
+	"main": "index.js",
+	"scripts": {
+		"db:migrate": "npx prisma migrate dev --name init",
+		"db:pull": "npx prisma db pull"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"description": "",
+	"devDependencies": {
+		"@types/node": "^24.9.1",
+		"nodemon": "^3.1.10",
+		"prisma": "^6.18.0",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.9.3"
+	}
 }
