--- a/backend/package.json
+++ b/backend/package.json
@@ -16,5 +16,9 @@
 		"prisma": "^6.18.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.9.3"
+	},
+	"dependencies": {
+		"@prisma/client": "^6.18.0",
+		"dotenv": "^17.2.3"
 	}
 }
