--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,10 +1,11 @@
 {
+	"extends": "@tsconfig/node22/tsconfig.json",
 	"compilerOptions": {
 		"target": "ES2022",
 		"module": "ESNext",
 		"moduleResolution": "node",
-		"rootDir": "src",
-		"outDir": "dist",
+		"outDir": "./dist",
+		"rootDir": "./",
 		"strict": true,
 		"esModuleInterop": true,
 		"skipLibCheck": true,
@@ -12,7 +13,6 @@
 		"allowSyntheticDefaultImports": true,
 		"types": ["node"]
 	},
-
-	"exclude": ["node_modules", "dist"],
-	"include": ["src/*.ts"]
+	"include": ["**/*.ts", "src/*.ts", "**/**/*.ts"],
+	"exclude": ["dist"]
 }
