--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@prisma/client": "^6.14.0",
 		"@radix-ui/react-dialog": "^1.1.15",
 		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-select": "^2.2.6",
@@ -19,13 +18,11 @@
 		"@radix-ui/react-slot": "^1.2.3",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.87.1",
-		"bcryptjs": "^3.0.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.1",
-		"jose": "^6.0.12",
 		"lucide-react": "^0.540.0",
 		"next": "15.4.4",
 		"next-themes": "^0.4.6",
@@ -34,8 +31,7 @@
 		"react-dom": "19.1.0",
 		"recharts": "^2.15.4",
 		"sonner": "^2.0.7",
-		"tailwind-merge": "^3.3.1",
-		"zod": "^4.0.17"
+		"tailwind-merge": "^3.3.1"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
