--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,12 +1,5 @@
-# Environment variables declared in this file are NOT automatically loaded by Prisma.
-# Please add `import "dotenv/config";` to your `prisma.config.ts` file, or use the Prisma CLI with Bun
-# to load environment variables from .env files: https://pris.ly/prisma-config-env-vars.
-
-# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
-# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
-
 # Database configuration
-DATABASE_URL="postgresql://username:passwordlocalhost:5432/database_name"
+DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
 
 # JWT Token secret
 JWT_SECRET_TOKEN="your_super_secret_jwt_token"
