--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^17.2.3",
 		"express": "^5.1.0",
+		"helmet": "^8.1.0",
 		"jose": "^6.1.0",
 		"zod": "^4.1.12"
 	}
