--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,18 +1,19 @@
 {
-	"extends": "@tsconfig/node22/tsconfig.json",
-	"compilerOptions": {
-		"target": "ES2022",
-		"module": "ESNext",
-		"moduleResolution": "node",
-		"outDir": "./dist",
-		"rootDir": "./",
-		"strict": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"forceConsistentCasingInFileNames": true,
-		"allowSyntheticDefaultImports": true,
-		"types": ["node"]
-	},
-	"include": ["**/*.ts", "src/*.ts", "**/**/*.ts"],
-	"exclude": ["dist"]
+    "extends": "@tsconfig/node22/tsconfig.json",
+    "compilerOptions": {
+        "target": "esnext",
+        "module": "nodenext",
+        "outDir": "./dist",
+        "rootDir": "./",
+        "strict": true,
+        "noEmit": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "forceConsistentCasingInFileNames": true,
+        "allowImportingTsExtensions": true,
+        "allowSyntheticDefaultImports": true,
+        "types": ["node"]
+    },
+    "include": ["**/*.ts", "src/*.ts", "**/**/*.ts"],
+    "exclude": ["dist"]
 }
