chore(db): add prisma generate for accessing database schema

--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "db:migrate": "npx prisma migrate dev --name init",
         "db:pull": "npx prisma db pull",
+        "db:generate": "npx prisma generate",
         "dev": "cross-env APP_STAGE=dev npx tsx --watch src/app.ts",
         "test": "cross-env APP_STAGE=test npx tsx --watch src/app.ts",
         "start": "node dist/app.js",
