--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
         "#*": "./src/*"
     },
     "devDependencies": {
+        "@faker-js/faker": "^10.1.0",
         "@tsconfig/node22": "^22.0.2",
         "@types/cookie-parser": "^1.4.10",
         "@types/cors": "^2.8.19",
