--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
     "main": "src/app.ts",
     "type": "module",
     "scripts": {
-        "db:migrate": "npx prisma migrate dev --name init",
+        "db:migrate": "npx prisma migrate dev",
         "db:pull": "npx prisma db pull",
         "db:generate": "npx prisma generate",
         "db:seed": "npx tsx src/db/seed.ts",
