--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,8 @@
         "db:generate": "npx prisma generate",
         "db:studio": "npx prisma studio",
         "db:seed": "npx tsx src/db/seed.ts",
-        "dev": "cross-env APP_STAGE=dev npx tsx --watch src/app.ts",
-        "test": "cross-env APP_STAGE=test npx tsx --watch src/app.ts",
+        "dev": "cross-env APP_STAGE=dev npx tsx --watch src/index.ts",
+        "test": "cross-env APP_STAGE=test npx tsx --watch src/index.ts",
         "start": "node dist/app.js",
         "build": "tsc"
     },
