--- a/backend/package.json
+++ b/backend/package.json
@@ -33,7 +33,8 @@
         "prisma": "^6.18.0",
         "ts-node": "^10.9.2",
         "tsx": "^4.20.6",
-        "typescript": "^5.9.3"
+        "typescript": "^5.9.3",
+        "vitest": "^4.0.7"
     },
     "dependencies": {
         "@prisma/client": "^6.18.0",
