--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
         "cross-env": "^10.1.0",
         "nodemon": "^3.1.10",
         "prisma": "^6.18.0",
+        "supertest": "^7.1.4",
         "ts-node": "^10.9.2",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3",
