--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -16,7 +16,7 @@
         "allowImportingTsExtensions": true,
         "forceConsistentCasingInFileNames": true,
         "allowSyntheticDefaultImports": true,
-        "types": ["node"]
+        "types": ["node", "vitest/globals"]
     },
     "include": ["src/**/*.ts"],
     "exclude": ["dist", "node_modules", "generated"]
