--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,7 @@
         "db:studio": "npx prisma studio",
         "db:seed": "npx tsx src/db/seed.ts",
         "dev": "cross-env APP_STAGE=dev npx tsx --watch src/index.ts",
-        "test": "cross-env APP_STAGE=test npx tsx --watch src/index.ts",
+        "test": "cross-env APP_STAGE=test vitest run",
         "start": "node dist/app.js",
         "build": "tsc"
     },
@@ -35,7 +35,7 @@
         "ts-node": "^10.9.2",
         "tsx": "^4.20.6",
         "typescript": "^5.9.3",
-        "vitest": "^4.0.7"
+        "vitest": "^3.2.4"
     },
     "dependencies": {
         "@prisma/client": "^6.18.0",
