--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.4",
         "@types/node": "^24.9.1",
+        "@types/supertest": "^6.0.3",
         "cross-env": "^10.1.0",
         "nodemon": "^3.1.10",
         "prisma": "^6.18.0",
