refactor: remove string quotation

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,5 +1,5 @@
 # Database configuration
-DATABASE_URL="postgresql://username:password@localhost:5432/database_name"
+DATABASE_URL=postgresql://username:password@localhost:5432/database_name
 
 # JWT Token secret
-JWT_SECRET_TOKEN="your_super_secret_jwt_token"
+JWT_SECRET_TOKEN=your_super_secret_jwt_token
