chore: update tsconfig paths - remove exclude node_modules to allow vitest modules as globals - update paths for consistent path imports - update include array to include all ts files - add root dir to prevent ambiguity

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -1,13 +1,13 @@
 {
-    "extends": "@tsconfig/node22/tsconfig.json",
     "compilerOptions": {
         "target": "es2022",
         "module": "nodenext",
         "moduleResolution": "nodenext",
         "outDir": "./dist",
+        "rootDir": ".",
         "baseUrl": ".",
         "paths": {
-            "#*": ["src/*"]
+            "#/*": ["./src/*"]
         },
         "strict": true,
         "noEmit": true,
@@ -19,6 +19,5 @@
         "typeRoots": ["./types", "./node_modules/@types", "./node_modules"],
         "types": ["vitest/globals"]
     },
-    "include": ["src/**/*.ts"],
-    "exclude": ["dist", "node_modules", "generated"]
+    "include": ["**/*.ts"]
 }
