--- a/backend/package.json
+++ b/backend/package.json
@@ -9,10 +9,10 @@
         "db:pull": "npx prisma db pull",
         "db:generate": "npx prisma generate",
         "db:studio": "npx prisma studio",
-        "db:seed": "npx tsx src/db/seed.ts",
-        "dev": "cross-env APP_STAGE=dev npx tsx --watch src/index.ts",
+        "db:seed": "node src/db/seed.ts",
+        "dev": "cross-env APP_STAGE=dev node --watch src/index.ts",
         "test": "cross-env APP_STAGE=test vitest run",
-        "start": "npx tsx src/index.ts",
+        "start": "node -r esbuild-register ./src/index.ts",
         "build": "tsc"
     },
     "keywords": [
@@ -36,6 +36,8 @@
         "@types/node": "^24.9.1",
         "@types/supertest": "^6.0.3",
         "cross-env": "^10.1.0",
+        "esbuild": "^0.27.0",
+        "esbuild-register": "^3.6.0",
         "nodemon": "^3.1.10",
         "prisma": "^6.18.0",
         "supertest": "^7.1.4",
