--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gearup",
+    "name": "gearup-api",
     "version": "1.0.0",
     "description": "Financial Manager API for GearUp",
     "main": "src/index.ts",
