chore: update tsconfig for emitting dist folder - update alias for paths for consistency with node - update root dir to src to minimize program scope - add types for nodes - update include to src for consistency - add exclude dist to prevent dist from being included during compilation

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -3,20 +3,18 @@
         "target": "es2022",
         "module": "nodenext",
         "moduleResolution": "nodenext",
-        "outDir": "./dist",
-        "rootDir": ".",
-        "baseUrl": ".",
+        "outDir": "dist",
+        "rootDir": "src",
         "paths": {
-            "#/*": ["./src/*"]
+            "#*": ["./src/*"]
         },
         "strict": true,
-        "noEmit": true,
         "esModuleInterop": true,
         "skipLibCheck": true,
-        "allowImportingTsExtensions": true,
         "forceConsistentCasingInFileNames": true,
         "allowSyntheticDefaultImports": true,
-        "types": ["vitest/globals"]
+        "types": ["node"]
     },
-    "include": ["**/*.ts"]
+    "include": ["src"],
+    "exclude": ["dist"]
 }
