fix: update prisma file path

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,7 +28,7 @@
         "#*": "./dist/*"
     },
     "prisma": {
-        "schema": "prisma/schema.prisma"
+        "schema": "./prisma/schema.prisma"
     },
     "devDependencies": {
         "@faker-js/faker": "^10.1.0",
