--- a/turbo.json
+++ b/turbo.json
@@ -1,22 +1,23 @@
 {
-    "$schema": "https://turborepo.com/schema.json",
-    "tasks": {
-        "build":{
-            "dependsOn": ["^build"],
-            "outputs": ["dist/**",".next/**","!.next/cache/**"]
-        },
-        "dev":{
-            "cache": false,
-            "persistent": true
-        },
-        "lint":{
-            "dependsOn": ["^lint"]
-        },
-        "test":{
-            "dependsOn": ["^test"]
-        },
-        "check-types": {
-            "dependsOn": ["^types"]
-        }
-    }
+	"$schema": "https://turborepo.com/schema.json",
+	"globalEnv": ["API_ORIGIN"],
+	"tasks": {
+		"build": {
+			"dependsOn": ["^build"],
+			"outputs": ["dist/**", ".next/**", "!.next/cache/**"]
+		},
+		"dev": {
+			"cache": false,
+			"persistent": true
+		},
+		"lint": {
+			"dependsOn": ["^lint"]
+		},
+		"test": {
+			"dependsOn": ["^test"]
+		},
+		"check-types": {
+			"dependsOn": ["^types"]
+		}
+	}
 }
