--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,7 @@
 		"@radix-ui/react-popover": "^1.1.15",
 		"@radix-ui/react-select": "^2.2.6",
 		"@radix-ui/react-separator": "^1.1.7",
-		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-slot": "^1.2.4",
 		"@radix-ui/react-tooltip": "^1.2.8",
 		"@tanstack/react-query": "^5.87.1",
 		"class-variance-authority": "^0.7.1",
@@ -21,6 +21,7 @@
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^17.2.1",
+		"embla-carousel-react": "^8.6.0",
 		"lucide-react": "^0.540.0",
 		"next": "15.4.4",
 		"next-themes": "^0.4.6",
@@ -29,7 +30,8 @@
 		"react-dom": "19.1.0",
 		"recharts": "^2.15.4",
 		"sonner": "^2.0.7",
-		"tailwind-merge": "^3.3.1"
+		"tailwind-merge": "^3.3.1",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
