--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-/lib/generated/prisma
-
-/lib/generated/prisma
+# prisma
+apps/api/src/generated/prisma
