--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -50,6 +50,7 @@
         "vitest": "^3.2.4"
     },
     "dependencies": {
+        "@prisma/adapter-pg": "^7.0.1",
         "@prisma/client": "^7.0.1",
         "bcryptjs": "^3.0.2",
         "cookie-parser": "^1.4.7",
