--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,8 +1,8 @@
 {
     "compilerOptions": {
-        "target": "es2022",
-        "module": "nodenext",
-        "moduleResolution": "nodenext",
+        "target": "es2023",
+        "module": "esnext",
+        "moduleResolution": "node",
         "outDir": "dist",
         "rootDir": "src",
         "paths": {
