--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -37,6 +37,7 @@
         "@types/cors": "^2.8.19",
         "@types/express": "^5.0.4",
         "@types/node": "^24.9.1",
+        "@types/passport-google-oauth20": "^2.0.17",
         "@types/supertest": "^6.0.3",
         "cross-env": "^10.1.0",
         "esbuild": "^0.27.0",
@@ -60,6 +61,8 @@
         "express-rate-limit": "^8.2.1",
         "helmet": "^8.1.0",
         "jose": "^6.1.0",
+        "passport": "^0.7.0",
+        "passport-google-oauth20": "^2.0.0",
         "zod": "^4.1.12"
     }
 }
