--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "gearup-api",
+    "name": "api",
     "version": "1.0.0",
     "description": "API for GearUp",
     "main": "dist/index.js",
